--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -150,7 +150,7 @@ jobs:
         # Update Channel
         echo "ac_add_options --enable-update-channel=release" >> mozconfig
         echo "ac_add_options --with-version-file-path=floorp/gecko/config" >> mozconfig
-        sed -i 's|https://@MOZ_APPUPDATE_HOST@/update/6/%PRODUCT%/%VERSION%/%BUILD_ID%/%BUILD_TARGET%/%LOCALE%/%CHANNEL%/%OS_VERSION%/%SYSTEM_CAPABILITIES%/%DISTRIBUTION%/%DISTRIBUTION_VERSION%/update.xml|https://%NORA_UPDATE_HOST%/%BUILD_TARGET%.update.xml|g' ./build/application.ini.in
+        sed -i 's|https://@MOZ_APPUPDATE_HOST@/update/6/%PRODUCT%/%VERSION%/%BUILD_ID%/%BUILD_TARGET%/%LOCALE%/%CHANNEL%/%OS_VERSION%/%SYSTEM_CAPABILITIES%/%DISTRIBUTION%/%DISTRIBUTION_VERSION%/update.xml|https://%NORA_UPDATE_HOST%update.xml|g' ./build/application.ini.in
 
         ./mach --no-interactive bootstrap --application-choice browser
       env:
