--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -32,7 +32,7 @@ jobs:
     secrets: inherit
     with:
       debug: false
-      pgo: ${{ inputs.pgo || true }}
+      pgo: ${{ github.event_name == 'workflow_dispatch' && inputs.pgo != false || github.event_name != 'workflow_dispatch' }}
 
   linux-amd64:
     name: Linux amd x64 build
@@ -41,7 +41,7 @@ jobs:
     secrets: inherit
     with:
       debug: false
-      pgo: ${{ inputs.pgo || true }}
+      pgo: ${{ github.event_name == 'workflow_dispatch' && inputs.pgo != false || github.event_name != 'workflow_dispatch' }}
 
   mac-amd64:
     name: Mac amd x64 build
@@ -50,7 +50,7 @@ jobs:
     secrets: inherit
     with:
       debug: false
-      pgo: ${{ inputs.pgo || true }}
+      pgo: ${{ github.event_name == 'workflow_dispatch' && inputs.pgo != false || github.event_name != 'workflow_dispatch' }}
 
   platform-tests:
     name: Platform Tests
