--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -144,7 +144,9 @@ jobs:
         echo "ac_add_options --with-branding=browser/branding/floorp-official" >> mozconfig
 
         # Set Flat Chrome
-        echo "ac_add_options --enable-chrome-format=flat" >> mozconfig
+        if [[ $GHA_profgen != 'true' ]]; then
+          echo "ac_add_options --enable-chrome-format=flat" >> mozconfig
+        fi
 
         sudo apt install msitools -y
 
