--- a/.github/workflows/pull-upstream.yml
+++ b/.github/workflows/pull-upstream.yml
@@ -2,10 +2,12 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-name: Pull Upstream
+name: (U) 🧰 Pull Upstream
 on:
   workflow_dispatch:
   workflow_call:
+  schedule:
+    - cron: "0 16 * * *"
 permissions:
   contents: write
 jobs:
