CI: Optimize build job concurrency and adjust nice level for improved performance

--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -199,11 +199,8 @@ jobs:
           export MOZ_BUILD_DATE=${{ inputs.MOZ_BUILD_DATE }}
         fi
 
-        export MOZ_NUM_JOBS=$(echo "$(nproc) * 0.3" | bc | xargs printf "%.0f")
-        if [ "$MOZ_NUM_JOBS" -lt 1 ]; then
-          export MOZ_NUM_JOBS=1
-        fi
-        nice -n 19 ./mach build --jobs=$MOZ_NUM_JOBS
+        export MOZ_NUM_JOBS=$(( $(nproc) * 3 / 4 ))
+        nice -n 10 ./mach build --jobs=$MOZ_NUM_JOBS
 
     - name: Package 📦
       run: |
