--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -4,7 +4,8 @@ on:
     workflow_dispatch:
     schedule:
       - cron: "0 15 * * *"
-
+permissions:
+  contents: write
 jobs:
   update-submodules:
     runs-on: ubuntu-latest
