--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -14,12 +14,11 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: "recursive"
-        token: ${{ secrets.PAT }}
 
     - name: configure git
       run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config user.name github-actions
+        git config user.email github-actions@github.com
 
     - name: Update Submodules
       run: |
@@ -31,5 +30,5 @@ jobs:
           exit 0
         fi
 
-        git commit -m "[FB bot] Update submodules" -a
+        git commit -m "Update submodules" -a
         git push
