--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -217,10 +217,10 @@ jobs:
         fi
 
         if [[ $GHA_profgen = 'true' ]];then
-        tar zcvf ${arch}-apple-darwin-output.tar.xz ./obj-${arch}-apple-darwin/dist/floorp
+        tar zcvf ${arch}-apple-darwin-output.tar.xz ./obj-${arch}-apple-darwin/dist/Floorp
           mv ${arch}-apple-darwin-output.tar.xz ~/output/
         else
-          tar -czf floorp-${arch}-apple-darwin-with-pgo.tar.gz ./obj-${arch}-apple-darwin/dist/
+          tar -czf floorp-${arch}-apple-darwin-with-pgo.tar.gz ./obj-${arch}-apple-darwin/dist/Floorp
           mv floorp-${arch}-apple-darwin-with-pgo.tar.gz ~/output/
         fi
       env:
