--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -26,8 +26,30 @@ on:
         default: ""
 
 jobs:
+  download-macos-sdk:
+    runs-on: macos-latest
+    steps:
+      - name: Get macOS SDK path
+        id: get-sdk
+        run: |
+          sudo xcode-select -s /Applications/Xcode_16.2.app
+          
+          SDK_PATH=$(xcrun --sdk macosx --show-sdk-path)
+          echo "SDK_PATH=$SDK_PATH" >> $GITHUB_ENV
+          echo "sdk_path=$SDK_PATH" >> $GITHUB_OUTPUT
+      - name: Tar and upload macOS SDK as artifact
+        run: |
+          tar -czf macos_sdk.tar.gz -C "${{ env.SDK_PATH }}" .
+      - name: Upload macOS SDK as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-sdk
+          path: macos_sdk.tar.gz
+          retention-days: 1
+
   mac-build:
     runs-on: ${{ matrix.runs-on }}
+    needs: download-macos-sdk
     strategy:
       matrix:
         runs-on: ["ubuntu-latest"]
@@ -42,6 +64,17 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: "recursive"
+
+    - name: Download macOS SDK
+      uses: actions/download-artifact@v4
+      with:
+        name: macos-sdk
+        path: ~/macos-sdk-artifact
+
+    - name: Extract macOS SDK
+      run: |
+        mkdir -p ~/macos-sdk
+        tar -xzf ~/macos-sdk-artifact/macos_sdk.tar.gz -C ~/macos-sdk --warning=no-unknown-keyword
 
     # - name: Configure sccache
     #   uses: actions/github-script@v7
@@ -136,6 +169,9 @@ jobs:
         else
           cp ./.github/workflows/mozconfigs/macosx64-aarch64.mozconfig mozconfig
         fi
+
+        # Add macOS SDK path
+        echo "ac_add_options --with-macos-sdk=$(echo ~)/macos-sdk" >> mozconfig
 
         # Copy Floorp Branding
         cp -r ./floorp/gecko/branding/* ./browser/branding/
