Update macOS workflow to use gtar for SDK extraction with fallback to tar

--- a/.github/workflows/mac_pgo.yml
+++ b/.github/workflows/mac_pgo.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Extract macOS SDK
         run: |
           mkdir -p ~/macos-sdk
-          tar -xzf ~/macos-sdk-artifact/macos_sdk.tar.gz -C ~/macos-sdk --warning=no-unknown-keyword
+          gtar -xzf ~/macos-sdk-artifact/macos_sdk.tar.gz -C ~/macos-sdk --warning=no-unknown-keyword || tar -xzf ~/macos-sdk-artifact/macos_sdk.tar.gz -C ~/macos-sdk
 
       - name: force install python3.12
         continue-on-error: true
