Update macOS workflows to enable SDK overwrite and enhance environment setup

--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -46,6 +46,7 @@ jobs:
           name: macos-sdk
           path: macos_sdk.tar.gz
           retention-days: 1
+          overwrite: true
 
   mac-build:
     runs-on: ${{ matrix.runs-on }}
