Add continue-on-error option to setup environment step in macOS integration workflow

--- a/.github/workflows/mac_integration.yml
+++ b/.github/workflows/mac_integration.yml
@@ -89,6 +89,7 @@ jobs:
             python-version: '3.11'
 
         - name: setup environment 🌲
+          continue-on-error: true
           env:
             GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
             SDKROOT: ${{ env.RUNNER_USERDIR }}/macos-sdk
