--- a/.github/workflows/pull-upstream.yml
+++ b/.github/workflows/pull-upstream.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           git clone -b release --single-branch https://github.com/mozilla-firefox/firefox --depth 1 upstream_release
           rm -rf ./upstream_release/.git ./upstream_release/.github
-          mv ./upstream_release/README.txt ./upstream_release/MOZ_README.txt
+          mv ./upstream_release/README.md ./upstream_release/MOZ_README.md
 
       - name: copy upstream to this_repo
         run: |
