--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "floorp"]
 	path = floorp
-	url = https://github.com/Floorp-Projects/Floorp-12
+	url = https://github.com/Floorp-Projects/Floorp
+	branch = main
