Update workflowUpdate workflow

--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -1,4 +1,4 @@
-name: (U) 🧰 Update Submodules
+name: (U) 🧰 Update Floorp Submodule
 
 on:
     workflow_dispatch:
@@ -7,30 +7,60 @@ on:
 permissions:
   contents: write
 jobs:
-  update-submodules:
+  update-floorp-submodule:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
       with:
         submodules: "recursive"
+        fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: configure git
+    - name: Configure Git
       run: |
-        git config user.name github-actions
-        git config user.email github-actions@github.com
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
 
-    - name: Update Submodules
+    - name: Update Floorp Submodule
+      id: update
       run: |
-        git submodule update --init --recursive
-        git submodule foreach git fetch origin
-        git submodule foreach git checkout origin/main
-        git add .
+        echo "::group::Fetching latest changes from Floorp"
+        cd floorp
+        git fetch origin
 
-        if git diff-index --quiet HEAD --; then
-          echo "No submodule changes; exiting."
+        CURRENT_COMMIT=$(git rev-parse HEAD)
+        echo "Current commit: $CURRENT_COMMIT"
+
+        git checkout origin/main
+        NEW_COMMIT=$(git rev-parse HEAD)
+        echo "New commit: $NEW_COMMIT"
+
+        if [ "$CURRENT_COMMIT" == "$NEW_COMMIT" ]; then
+          echo "No updates available for Floorp submodule."
+          echo "has_changes=false" >> $GITHUB_OUTPUT
           exit 0
         fi
 
-        git commit -m "Update submodules" -a
-        git push
+        cd ..
+        git add floorp
+
+        git commit -m "Update Floorp submodule to latest main branch" \
+          -m "From: ${CURRENT_COMMIT:0:7}" \
+          -m "To:   ${NEW_COMMIT:0:7}"
+        echo "has_changes=true" >> $GITHUB_OUTPUT
+        echo "::endgroup::"
+
+    - name: Push Changes
+      if: steps.update.outputs.has_changes == 'true'
+      run: |
+        git push origin main
+
+    - name: Summary
+      if: always()
+      run: |
+        if [ "${{ steps.update.outputs.has_changes }}" == "true" ]; then
+          echo "✅ Floorp submodule was successfully updated!" >> $GITHUB_STEP_SUMMARY
+        else
+          echo "ℹ️ No updates were available for the Floorp submodule." >> $GITHUB_STEP_SUMMARY
+        fi
