--- a/.github/workflows/mac_pgo.yml
+++ b/.github/workflows/mac_pgo.yml
@@ -72,6 +72,31 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Set LLVM environment variables
+        run: |
+          echo "LLVM_VERSION=19" >> $GITHUB_ENV
+          if [[ $ARCH_TYPE == 'x86_64' ]];then
+              echo "TARGET_TRIPLE=x86_64-apple-darwin" >> $GITHUB_ENV
+          else
+              echo "TARGET_TRIPLE=aarch64-apple-darwin" >> $GITHUB_ENV
+          fi
+          echo "MACOSX_DEPLOYMENT_TARGET=11.0" >> $GITHUB_ENV
+
+      - name: Install LLVM 19 toolchain
+        run: |
+          # Install LLVM 19 via Homebrew
+          brew install llvm@19
+
+          # Add LLVM to PATH
+          echo "/opt/homebrew/opt/llvm@19/bin" >> $GITHUB_PATH
+          echo "/usr/local/opt/llvm@19/bin" >> $GITHUB_PATH
+
+          # Verify versions
+          echo "Checking installed versions:"
+          export PATH="/opt/homebrew/opt/llvm@19/bin:/usr/local/opt/llvm@19/bin:$PATH"
+          clang --version || echo "clang not found"
+          llvm-profdata --version || echo "llvm-profdata not found"
+
       - name: setup environment 🌲
         env:
           GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
@@ -84,6 +109,9 @@ jobs:
           # Add macOS SDK path
           echo "ac_add_options --with-macos-sdk=$(echo ~)/macos-sdk" >> mozconfig
 
+          # Add linker configuration to match build
+          echo "ac_add_options --enable-linker=lld" >> mozconfig
+
           echo 'mozconfig: **********************'
           cat ./mozconfig
           echo '*********************************'
@@ -95,6 +123,7 @@ jobs:
           # Override mozconfig
           echo -e "ac_add_options --enable-bootstrap" > mozconfig
           echo "ac_add_options --with-macos-sdk=$(echo ~)/macos-sdk" >> mozconfig
+          echo "ac_add_options --enable-linker=lld" >> mozconfig
 
       - name: Install setup tool via PIP 📦
         run: |
@@ -114,7 +143,18 @@ jobs:
           MOZ_SDK_DIR: ${{ env.RUNNER_USERDIR }}/macos-sdk
           GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
         run: |
-          export LLVM_PROFDATA=$RUNNER_USERDIR/.mozbuild/clang/bin/llvm-profdata
+          # Use LLVM 19's llvm-profdata
+          if [[ -f /opt/homebrew/opt/llvm@19/bin/llvm-profdata ]]; then
+            export LLVM_PROFDATA=/opt/homebrew/opt/llvm@19/bin/llvm-profdata
+          elif [[ -f /usr/local/opt/llvm@19/bin/llvm-profdata ]]; then
+            export LLVM_PROFDATA=/usr/local/opt/llvm@19/bin/llvm-profdata
+          else
+            export LLVM_PROFDATA=$RUNNER_USERDIR/.mozbuild/clang/bin/llvm-profdata
+          fi
+          
+          echo "Using LLVM_PROFDATA: $LLVM_PROFDATA"
+          $LLVM_PROFDATA --version || echo "llvm-profdata version check failed"
+          
           export JARLOG_FILE="en-US.log"
           ./mach python build/pgo/profileserver.py --binary ./obj-${ARCH_TYPE}-apple-darwin/dist/floorp/Floorp.app/Contents/MacOS/floorp
 
