--- a/.github/workflows/patch-test.yml
+++ b/.github/workflows/patch-test.yml
@@ -30,7 +30,7 @@ jobs:
 
         - uses: actions/checkout@v4
           with:
-            repository: "Floorp-Projects/Floorp-12"
+            repository: "Floorp-Projects/Floorp"
             ref: "main"
 
         - name: Download artifact
