--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -15,9 +15,6 @@ on:
 jobs:
   linux-build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        arch: [x86_64, aarch64]
     steps:
     - name: Use Node.js
       uses: actions/setup-node@v4
@@ -45,11 +42,7 @@ jobs:
     - name: Setup Rust 🦀
       run: |
         rustup default stable
-        if [[ "${{ matrix.arch }}" == "aarch64" ]]; then
-          rustup target add aarch64-unknown-linux-gnu
-        else
-          rustup target add x86_64-unknown-linux-gnu
-        fi
+        rustup target add x86_64-unknown-linux-gnu
         export CARGO_INCREMENTAL=0
 
     - name: Allocate swap
@@ -80,13 +73,7 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE
 
-        if [[ "${{ matrix.arch }}" == "aarch64" ]]; then
-          git submodule update --remote
-          cp ./.github/workflows/mozconfigs/linux64-aarch64.mozconfig mozconfig
-        else
-          cp ./.github/workflows/mozconfigs/linux64.mozconfig mozconfig
-        fi
-
+        cp ./.github/workflows/mozconfigs/linux64.mozconfig mozconfig
         cp -r ./floorp/gecko/branding/* ./browser/branding/
         sudo apt install msitools -y
 
@@ -132,45 +119,30 @@ jobs:
         ./mach package
         rm -rf ~/.cargo
 
-    - name: Set arch-specific names
-      id: arch_names
-      run: |
-        if [[ "${{ matrix.arch }}" == "aarch64" ]]; then
-          echo "obj_dir=obj-aarch64-unknown-linux-gnu" >> $GITHUB_OUTPUT
-          echo "artifact_name_prefix=floorp-linux-aarch64" >> $GITHUB_OUTPUT
-          echo "dist_host_name=linux-aarch64-dist-host" >> $GITHUB_OUTPUT
-          echo "app_ini_name=linux-aarch64-application-ini" >> $GITHUB_OUTPUT
-        else
-          echo "obj_dir=obj-x86_64-pc-linux-gnu" >> $GITHUB_OUTPUT
-          echo "artifact_name_prefix=floorp-linux-amd64" >> $GITHUB_OUTPUT
-          echo "dist_host_name=linux-amd64-dist-host" >> $GITHUB_OUTPUT
-          echo "app_ini_name=linux-amd64-application-ini" >> $GITHUB_OUTPUT
-        fi
-
     # Publish START
     - name: Extract Package 📦
       run: |
-        mv ${{ steps.arch_names.outputs.obj_dir }}/dist/floorp-*.tar.xz ./${{ steps.arch_names.outputs.artifact_name_prefix }}-moz-artifact.tar.xz
+        mv obj-x86_64-pc-linux-gnu/dist/floorp-*.tar.xz ./floorp-linux-amd64-moz-artifact.tar.xz
         # Create nora-build-id.txt
-        cp ./${{ steps.arch_names.outputs.obj_dir }}/dist/bin/application.ini ./nora-application.ini
+        cp ./obj-x86_64-pc-linux-gnu/dist/bin/application.ini ./nora-application.ini
 
     - name: Publish Package Mozilla Artifact 🎁
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ steps.arch_names.outputs.artifact_name_prefix }}-moz-artifact
-        path: ./${{ steps.arch_names.outputs.artifact_name_prefix }}-moz-artifact.tar.xz
+        name: floorp-linux-amd64-moz-artifact
+        path: ./floorp-linux-amd64-moz-artifact.tar.xz
 
     - name: Publish dist/host for MAR
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ steps.arch_names.outputs.dist_host_name }}
-        path: ${{ steps.arch_names.outputs.obj_dir }}/dist/host/
+        name: linux-amd64-dist-host
+        path: obj-x86_64-pc-linux-gnu/dist/host/
         overwrite: true
 
     - name: Publish nora-application.ini for MAR
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ steps.arch_names.outputs.app_ini_name }}
+        name: linux-amd64-application-ini
         path: ./nora-application.ini
         overwrite: true
     # Publish END
