ci: Enable workflow_call for Linux AArch64 build
Add a `workflow_call` trigger to the Linux AArch64 build workflow. This allows it to be invoked by other workflows, making the build process more modular and reusable.

Additionally, update the `run-name` to dynamically include "Debug" when the debug input is true, improving clarity in the GitHub Actions UI.

--- a/.github/workflows/wrapper_linux_aarch64_build.yml
+++ b/.github/workflows/wrapper_linux_aarch64_build.yml
@@ -11,7 +11,13 @@ on:
         type: boolean
         required: true
 
-run-name: Linux AArch64 build
+  workflow_call:
+    inputs:
+      debug:
+        type: boolean
+        required: true
+
+run-name: Linux AArch64 build${{toJSON(inputs.debug) == 'true' && ' Debug' || ''}}
 jobs:
   run-main:
     name: Linux-AArch64
