refactor(ci): Consolidate Linux build workflows
Merge the `aarch64` Linux build workflow into the main `x86_64` workflow to reduce code duplication and simplify CI maintenance.

The now-redundant `linux_aarch64_build.yml` and its corresponding wrapper have been deleted. The generic `linux_build.yml` and `wrapper_linux_build.yml` are now used for both architectures.

The `daily-build.yml` has been updated to call the unified workflow for the `aarch64` build.

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -38,10 +38,11 @@ jobs:
 
   linux-aarch64:
     name: Linux aarch64 build
-    uses: ./.github/workflows/wrapper_linux_aarch64_build.yml
+    uses: ./.github/workflows/wrapper_linux_build.yml
     secrets: inherit
     with:
       debug: false
+      pgo: false # TODO: Enable PGO for Linux aarch64
 
   mac-amd64:
     name: Mac amd x64 build
