--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -15,6 +15,10 @@ on:
 jobs:
   linux-build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: [ "x86_64", "aarch64" ]
     steps:
     - name: Use Node.js
       uses: actions/setup-node@v4
@@ -42,7 +46,11 @@ jobs:
     - name: Setup Rust 🦀
       run: |
         rustup default stable
-        rustup target add x86_64-unknown-linux-gnu
+        if [[ ${{ matrix.arch }} == "aarch64" ]]; then
+          rustup target add aarch64-unknown-linux-gnu
+        else
+          rustup target add x86_64-unknown-linux-gnu
+        fi
         export CARGO_INCREMENTAL=0
 
     - name: Allocate swap
@@ -73,7 +81,11 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE
 
-        cp ./.github/workflows/mozconfigs/linux64.mozconfig mozconfig
+        if [[ ${{ matrix.arch }} == "aarch64" ]]; then
+          cp ./.github/workflows/mozconfigs/linux64-aarch64.mozconfig mozconfig
+        else
+          cp ./.github/workflows/mozconfigs/linux64.mozconfig mozconfig
+        fi
         cp -r ./floorp/gecko/branding/* ./browser/branding/
         sudo apt install msitools -y
 
@@ -122,27 +134,31 @@ jobs:
     # Publish START
     - name: Extract Package 📦
       run: |
-        mv obj-x86_64-pc-linux-gnu/dist/floorp-*.tar.xz ./floorp-linux-amd64-moz-artifact.tar.xz
-        # Create nora-build-id.txt
-        cp ./obj-x86_64-pc-linux-gnu/dist/bin/application.ini ./nora-application.ini
+        if [[ ${{ matrix.arch }} == "aarch64" ]]; then
+          mv obj-aarch64-unknown-linux-gnu/dist/floorp-*.tar.xz ./floorp-linux-aarch64-moz-artifact.tar.xz
+          cp ./obj-aarch64-unknown-linux-gnu/dist/bin/application.ini ./nora-application.ini
+        else
+          mv obj-x86_64-pc-linux-gnu/dist/floorp-*.tar.xz ./floorp-linux-amd64-moz-artifact.tar.xz
+          cp ./obj-x86_64-pc-linux-gnu/dist/bin/application.ini ./nora-application.ini
+        fi
 
     - name: Publish Package Mozilla Artifact 🎁
       uses: actions/upload-artifact@v4
       with:
-        name: floorp-linux-amd64-moz-artifact
-        path: ./floorp-linux-amd64-moz-artifact.tar.xz
+        name: floorp-linux-${{ matrix.arch }}-moz-artifact
+        path: ./floorp-linux-*-moz-artifact.tar.xz
 
     - name: Publish dist/host for MAR
       uses: actions/upload-artifact@v4
       with:
-        name: linux-amd64-dist-host
-        path: obj-x86_64-pc-linux-gnu/dist/host/
+        name: linux-${{ matrix.arch }}-dist-host
+        path: obj-*/dist/host/
         overwrite: true
 
     - name: Publish nora-application.ini for MAR
       uses: actions/upload-artifact@v4
       with:
-        name: linux-amd64-application-ini
+        name: linux-${{ matrix.arch }}-application-ini
         path: ./nora-application.ini
         overwrite: true
     # Publish END
