ci(linux): Allow overwriting artifacts on re-run
The `actions/upload-artifact@v4` action fails if an artifact with the same name already exists from a previous job attempt within the same workflow run.

Set `overwrite: true` on the `moz-artifact` upload step to allow the new artifact to replace the old one. This makes re-running failed jobs more reliable.

--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -147,6 +147,7 @@ jobs:
       with:
         name: floorp-linux-${{ matrix.arch }}-moz-artifact
         path: ./floorp-linux-*-moz-artifact.tar.xz
+        overwrite: true
 
     - name: Publish dist/host for MAR
       uses: actions/upload-artifact@v4
