--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [ "x86_64", "aarch64" ]
+        arch: [ "amd64", "aarch64" ]
     steps:
     - name: Use Node.js
       uses: actions/setup-node@v4
