build(ci): Fix dist/host artifact path for Linux MAR generation
The `upload-artifact` step in the `linux_build.yml` workflow was using a wildcard path (`obj-*/dist/host/`) which could be unreliable.

This change introduces a new step to move the `dist/host` directory from its architecture-specific build directory to a predictable top-level `./dist-host` directory. The subsequent upload step is updated to use this stable path.

This ensures the correct `dist/host` files, required for generating MAR (Mozilla Archive) updates, are consistently archived. The `floorp` submodule is also updated to incorporate related changes.

--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -149,11 +149,19 @@ jobs:
         path: ./floorp-linux-*-moz-artifact.tar.xz
         overwrite: true
 
+    - name: Prepare dist/host for MAR
+      run: |
+        if [[ ${{ matrix.arch }} == "aarch64" ]]; then
+          mv obj-aarch64-unknown-linux-gnu/dist/host ./dist-host
+        else
+          mv obj-x86_64-pc-linux-gnu/dist/host ./dist-host
+        fi
+
     - name: Publish dist/host for MAR
       uses: actions/upload-artifact@v4
       with:
         name: linux-${{ matrix.arch }}-dist-host
-        path: obj-*/dist/host/
+        path: ./dist-host/
         overwrite: true
 
     - name: Publish nora-application.ini for MAR
